# tf-approximate

./: .gitignore  LICENSE  README.md
axqconv/: approximate_selector.h  generate_header.py  quantization_utils.h
cpu/: README.md
cpu/axqconv/: Makefile  axqconv.cc  generate_header.py  tune.cc
cpu/examples/cifar-10-graphs/: resnet_8_quant.pb
examples/: cifar10_ax_inference.py
examples/cifar-10-graphs/: resnet_8.pb  resnet_8_quant_ax.pb
gpu/: README.md
gpu/cmake/modules/: FindSingularityBuilder.cmake
gpu/containers/: tf-approximate-gpu.def.in
gpu/examples/: fake_approx_train.py
gpu/python/keras/layers/: fake_approx_convolutional.py
gpu/src/: CMakeLists.txt  approx_gemm_functors.h  approx_nn_conv_kernels.cpp  approx_nn_conv_kernels.h  approx_nn_conv_ops.cpp  approx_nn_conv_ops_gemm.cpp  approx_nn_conv_ops_gpu.h  approx_nn_ops.cpp  approx_ops_types.h  gpu_cuda_alias.h  gpu_device_functions.h  gpu_utils.h
gpu/src/cuda/: CMakeLists.txt  approx_nn_conv_kernels.cu  approx_ops_types.cu
gpu/test/: test_table_approx_conv_2d.py
tf1/: README.md
tf1/axqconv/: Makefile  tables.cc
tf2/: CMakeLists.txt  README.md
tf2/cmake/modules/: FindTensorflow.cmake
tf2/containers/: CMakeLists.txt  tf-approximate-gpu.sh.in
tf2/examples/: fake_approx_eval.py
tf2/src/: approx_nn_conv_ops.h  approx_nn_conv_ops_ref.cpp  gpu_kernel_helper.h  gpu_launch_config.h
